tests/lean/assert_fail.lean.expected.out
assert_fail.lean:4:0: error: 2 unsolved subgoals
a b : Prop,
H : b ∧ a
⊢ a

a b : Prop,
H : b ∧ a,
H : a
⊢ a ∧ b
assert_fail.lean:4:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
assert_fail.lean:9:2: error:invalid tactic, there are no goals to be solved
proof state:
no goals
assert_fail.lean:10:0: error: don't know how to synthesize placeholder
a : Prop,
Ha : a
⊢ a
assert_fail.lean:10:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
